[package]
name = "spacelab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.8.1"
bevy-inspector-egui = "0.12.1"
bevy_egui = "0.16.1"
bevy_pancam = { version = "0.6.1", features = ["bevy_egui"] }
bevy_prototype_lyon = "0.6.0"
heron = { version = "4.0.1", features = ["2d"] }
leafwing-input-manager = "0.5.2"
egui_extras = "0.19.0"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
